--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -14,11 +14,12 @@
   <tbody>
     <% @tasks.each do |task| %>
       <tr>
-        <td><%= task.title %></td>
-        <td><%= task.content %></td>
-        <td><%= link_to t('view.tasks.index.Show'), task %></td>
-        <td><%= link_to t('view.tasks.index.Edit'), edit_task_path(task) %></td>
-        <td><%= link_to t('view.tasks.index.Destroy'), task, method: :delete, data: { confirm: t('view.tasks.index.Are you sure?') } %></td>
+        <td class="task_row"><%= task.title %></td>
+        <td class="task_row"><%= task.content %></td>
+        <td class="task_row"><%= task.created_at.strftime('%Y/%m/%d') %></td>
+        <td class="task_row"><%= link_to t('view.tasks.index.Show'), task %></td>
+        <td class="task_row"><%= link_to t('view.tasks.index.Edit'), edit_task_path(task) %></td>
+        <td class="task_row"><%= link_to t('view.tasks.index.Destroy'), task, method: :delete, data: { confirm: t('view.tasks.index.Are you sure?') } %></td>
       </tr>
     <% end %>
   </tbody>
