--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -2,11 +2,28 @@
 
 <h1>Tasks</h1>
 
+<%= form_with(url: tasks_path, method: :get, local: true) do |f| %>
+  <%= f.label :title %>
+  <%= f.text_field :title ,placeholder: "検索"%>
+  <%= f.label :status %>
+  <%= f.select :status, ["未着手","着手","完了"], { include_blank: "select"} %>
+  <%= f.label :priority %>
+  <%= f.select :priority, ["高","中","低"], { include_blank: "select"} %>
+  <%= f.hidden_field :search, value:"true" %>
+  <%= f.submit "Search" %>
+<% end %>
+
+
+<br>
+<%= link_to t('view.tasks.index.New Task'), new_task_path %>
+
 <table>
   <thead>
     <tr>
       <th>Title</th>
       <th>Content</th>
+      <th><%= link_to "終了期限", tasks_path(sort_expired: "true") %></th>
+      <th>created_at</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -16,6 +33,9 @@
       <tr>
         <td class="task_row"><%= task.title %></td>
         <td class="task_row"><%= task.content %></td>
+        <td class="task_row"><%= task.limit_date.strftime('%Y/%m/%d') %></td>
+        <td><%= task.status %></td>
+        <td><%= task.priority %></td>
         <td class="task_row"><%= task.created_at.strftime('%Y/%m/%d') %></td>
         <td class="task_row"><%= link_to t('view.tasks.index.Show'), task %></td>
         <td class="task_row"><%= link_to t('view.tasks.index.Edit'), edit_task_path(task) %></td>
@@ -24,7 +44,3 @@
     <% end %>
   </tbody>
 </table>
-
-<br>
-
-<%= link_to t('view.tasks.index.New Task'), new_task_path %>
