--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -10,5 +10,10 @@
   <%= @task.content %>
 </p>
 
+<p>
+  <strong>Limit_date:</strong>
+  <%= @task.limit_date %>
+</p>
+
 <%= link_to 'Edit', edit_task_path(@task) %> |
 <%= link_to 'Back', tasks_path %>
