--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -4,7 +4,7 @@
 
 <%= form_with(url: tasks_path, method: :get, local: true) do |f| %>
   <%= f.label :title %>
-  <%= f.text_field :title ,placeholder: "検索"%>
+  <%= f.text_field :title ,placeholder: "検索", value: params[:title] %>
   <%= f.label :status %>
   <%= f.select :status, ["未着手","着手","完了"], { include_blank: "select"} %>
   <%= f.label :priority %>
