viewの修正及びspec/models/task_spec.rbの修正

--- a/app/views/tasks/confirm.html.erb
+++ b/app/views/tasks/confirm.html.erb
@@ -4,6 +4,9 @@
   <%= form.hidden_field :content %>
   <p><%= @task.title %></p>
   <p><%= @task.content %></p>
+  <p><%= @task.limit_date %></p>
+  <p><%= @task.status %></p>
+  <p><%= @task.priority %></p>
   <%= form.submit "登録" %>
   <%= form.submit "もどる" ,name: 'back' %>
 <% end %>
