--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -31,6 +31,11 @@
     <%= form.select :status,["未着手","着手","完了"] %>
   </div>
 
+  <div class="field">
+    <%= form.label :priority %>
+    <%= form.select :priority,["高","中","低"] %>
+  </div>
+
   <div class="actions">
     <%= form.submit %>
   </div>
