--- a/app/assets/stylesheets/tasks.scss
+++ b/app/assets/stylesheets/tasks.scss
@@ -1,3 +1,23 @@
 // Place all the styles related to the Tasks controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+
+table tr {
+  text-align: center;
+}
+.select-drop {
+  margin-bottom: 0;
+}
+.form-group {
+  width: 400px;
+  display: inline-block;
+}
+.drop {
+  width: 100px;
+  display: inline-block;
+}
+.pagination {
+  justify-content: center;
+}
