--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,49 +1,72 @@
-<p id="notice"><%= notice %></p>
 
-<h1>Tasks</h1>
+<div class="container-fluid">
+  <h1>Tasks</h1>
+  <p id="notice"><%= notice %></p>
 
-<%= form_with(url: tasks_path, method: :get, local: true) do |f| %>
-  <%= f.label :title %>
-  <%= f.text_field :title ,placeholder: "検索", value: params[:title] %>
-  <%= f.label :status %>
-  <%= f.select :status, ["未着手","着手","完了"], { include_blank: "select"} %>
-  <%= f.label :priority %>
-  <%= f.select :priority, ["高","中","低"], { include_blank: "select"} %>
-  <%= f.hidden_field :search, value:"true" %>
-  <%= f.submit "Search" %>
-<% end %>
-
-
-<br>
-<%= link_to t('view.tasks.index.New Task'), new_task_path %>
-
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Content</th>
-      <th><%= link_to "終了期限", tasks_path(sort_expired: "true") %></th>
-      <th><%= link_to "優先順位", tasks_path(sort_priority: "true") %></th>
-      <th>created_at</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @tasks.each do |task| %>
-      <tr>
-        <td class="task_row"><%= task.title %></td>
-        <td class="task_row"><%= task.content %></td>
-        <td class="task_row_limit_date"><%= task.limit_date.strftime('%Y/%m/%d') %></td>
-        <td class="task_row"><%= task.status %></td>
-        <td class="task_row_priority"><%= task.priority %></td>
-        <td class="task_row"><%= task.created_at.strftime('%Y/%m/%d') %></td>
-        <td class="task_row"><%= link_to t('view.tasks.index.Show'), task %></td>
-        <td class="task_row"><%= link_to t('view.tasks.index.Edit'), edit_task_path(task) %></td>
-        <td class="task_row"><%= link_to t('view.tasks.index.Destroy'), task, method: :delete, data: { confirm: t('view.tasks.index.Are you sure?') } %></td>
-      </tr>
+  <div class="row justify-content-around">
+    <%= form_with(url: tasks_path, method: :get, local: true) do |f| %>
+      <%= f.text_field :title ,placeholder: "検索", value: params[:title] , class: "form-group form-control" %>
+      <%= f.select :status, ['未着手', '着手', '完了'], {include_blank: "Status" },{ class: 'form-control drop'} %>
+      <%= f.select :priority, ["高","中","低"], {include_blank: "Priority" }, { class: 'form-control drop'} %>
+      <%= f.hidden_field :search, value:"true" %>
+      <%= f.submit "Search", class: "btn btn-outline-secondary" %>
     <% end %>
-  </tbody>
-</table>
+  </div>
 
-<%= paginate @tasks %>
+
+  <br>
+  <%= link_to t('view.tasks.index.New Task'), new_task_path,class: "btn btn-outline-primary" %>
+
+  <div class="table-responsive">
+    <table class="table table-hover">
+      <thead>
+        <tr>
+          <th>Title</th>
+          <th>Content</th>
+          <th>
+            <div class="dropdown">
+              <button type="button" id="dropdown1" class="btn btn-secondary dropdown-toggle btn-outline-primary" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                日付
+              </button>
+              <div class="dropdown-menu" aria-labelledby="dropdown1">
+                <p class="select-drop"><%= link_to "終了期限", tasks_path(sort_expired: "true") %></p>
+                <p class="select-drop"><%= link_to "戻す", tasks_path(Task.all.order(created_at: :desc)) %></p>
+              </div>
+            </div>
+          </th>
+          <th>Status</th>
+          <th>
+            <div class="dropdown">
+              <button type="button" id="dropdown1" class="btn btn-secondary dropdown-toggle btn-outline-primary" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                重要度
+              </button>
+              <div class="dropdown-menu" aria-labelledby="dropdown1">
+                <p class="select-drop"><%= link_to "優先順位", tasks_path(sort_priority: "true") %></p>
+                <p class="select-drop"><%= link_to "戻す", tasks_path(Task.all.order(created_at: :desc)) %></p>
+          </th>
+          <th>created_at</th>
+          <th colspan="3"></th>
+        </tr>
+      </thead>
+
+      <tbody>
+        <% @tasks.each do |task| %>
+          <tr>
+            <td class="task_row"><%= task.title %></td>
+            <td class="task_row"><%= task.content %></td>
+            <td class="task_row_limit_date"><%= task.limit_date.strftime('%Y/%m/%d') %></td>
+            <td class="task_row"><%= task.status %></td>
+            <td class="task_row_priority"><%= task.priority %></td>
+            <td class="task_row"><%= task.created_at.strftime('%Y/%m/%d') %></td>
+            <td class="task_row"><%= link_to t('view.tasks.index.Show'), task ,class: "btn btn-outline-primary" %></td>
+            <td class="task_row"><%= link_to t('view.tasks.index.Edit'), edit_task_path(task) ,class: "btn btn-outline-warning" %></td>
+            <td class="task_row"><%= link_to t('view.tasks.index.Destroy'), task, method: :delete, data: { confirm: t('view.tasks.index.Are you sure?') } ,class: "btn btn-outline-danger" %></td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
+
+  <%= paginate @tasks ,class:"pagination" %>
+
+</div>
