--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,9 +11,35 @@
   </div>
 </div>
 <br></br>
-<div class="text-center">
-  <% if current_user.id == @user.id %>
-    <%= link_to "編集する", edit_task_path(@user.id) %>
-  <% else %>
-  <% end %>
+
+<div class="table-responsive">
+  <table class="table table-hover">
+    <thead>
+      <tr>
+        <th>Title</th>
+        <th>Content</th>
+        <th><p class="select-drop"><%= link_to "終了期限", tasks_path(sort_expired: "true") %></p></th>
+        <th>Status</th>
+        <th><p class="select-drop"><%= link_to "優先順位", tasks_path(sort_priority: "true") %></p></th>
+        <th>created</th>
+        <th colspan="3"></th>
+      </tr>
+    </thead>
+
+    <tbody>
+      <% @user.tasks.each do |task| %>
+        <tr>
+          <td class="task_row"><%= task.title %></td>
+          <td class="task_row"><%= task.content %></td>
+          <td class="task_row_limit_date"><%= task.limit_date.strftime('%Y/%m/%d') %></td>
+          <td class="task_row"><%= task.status %></td>
+          <td class="task_row_priority"><%= task.priority %></td>
+          <td class="task_row"><%= task.created_at.strftime('%Y/%m/%d') %></td>
+          <td class="task_row"><%= link_to t('view.tasks.index.Show'), task ,class: "btn btn-outline-primary" %></td>
+          <td class="task_row"><%= link_to t('view.tasks.index.Edit'), edit_task_path(task) ,class: "btn btn-outline-warning" %></td>
+          <td class="task_row"><%= link_to t('view.tasks.index.Destroy'), task, method: :delete, data: { confirm: t('view.tasks.index.Are you sure?') } ,class: "btn btn-outline-danger" %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
 </div>
