update:リンク先修正

--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -6,7 +6,7 @@
     <br>
   </div>
   <br>
-  <%= link_to t('view.tasks.index.New Task'), new_task_path,class: "btn btn-outline-primary" %>
+  <%= link_to 'new', new_admin_user_path, class: "btn btn-outline-primary" %>
   <div class="table-responsive">
     <table class="table table-hover">
       <thead>
