--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,6 +31,9 @@
         </div>
       </div>
     </nav>
+    <% flash.each do |key, value| %>
+      <%= content_tag(:div, value, class:"#{key}") %>
+    <% end %>
     <%= yield %>
     <script src="../assets/new-age.js"></script>
   </body>
