--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
-        <%= link_to "タスク一覧", tasks_path %>
+         <p class="navbar-head"></p>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           List
           <i class="fas fa-bars"></i>
@@ -18,14 +18,15 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <% if logged_in? %>
-              <% if logged_in? %>
+              <% if current_user.admin? %>
                 <li class="nav-item"><%= link_to "管理画面", admin_users_path %></li>
-              <% end %>
-                <li class="nav-item"><%= link_to "ログアウト", session_path(current_user.id), method: :delete %></li>
-                <li class="nav-item"><%= link_to "プロフィール", user_path(current_user.id) %></li>
-              <% else %>
-                <li class="nav-item"><%= link_to "新規登録", new_user_path %></li>
-                <li class="nav-item"><%= link_to "ログイン", new_session_path %></li>
+            <% end %>
+              <li class="nav-item"><%= link_to "ログアウト", session_path(current_user.id), method: :delete %></li>
+              <li class="nav-item"><%= link_to "プロフィール", user_path(current_user.id) %></li>
+              <li class="nav-item"><%= link_to "タスクス", tasks_path(current_user.id) %></li>
+            <% else %>
+              <li class="nav-item"><%= link_to "新規登録", new_user_path %></li>
+              <li class="nav-item"><%= link_to "ログイン", new_session_path %></li>
             <% end %>
           </ul>
         </div>
