--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -13,15 +13,15 @@
 <br></br>
 
 <div class="table-responsive">
-  <table class="table table-hover">
+  <table class="table table-striped">
     <thead>
       <tr>
-        <th>Title</th>
-        <th>Content</th>
-        <th><p class="select-drop"><%= link_to "終了期限", tasks_path(sort_expired: "true") %></p></th>
-        <th>Status</th>
-        <th><p class="select-drop"><%= link_to "優先順位", tasks_path(sort_priority: "true") %></p></th>
-        <th>created</th>
+        <th scope="col">Title</th>
+        <th scope="col">Content</th>
+        <th scope="col"><p class="select-drop"><%= link_to "終了期限", tasks_path(sort_expired: "true") %></p></th>
+        <th scope="col">Status</th>
+        <th scope="col"><p class="select-drop"><%= link_to "優先順位", tasks_path(sort_priority: "true") %></p></th>
+        <th scope="col">created</th>
         <th colspan="3"></th>
       </tr>
     </thead>
@@ -35,9 +35,9 @@
           <td class="task_row"><%= task.status %></td>
           <td class="task_row_priority"><%= task.priority %></td>
           <td class="task_row"><%= task.created_at.strftime('%Y/%m/%d') %></td>
-          <td class="task_row"><%= link_to t('view.tasks.index.Show'), task ,class: "btn btn-outline-primary" %></td>
-          <td class="task_row"><%= link_to t('view.tasks.index.Edit'), edit_task_path(task) ,class: "btn btn-outline-warning" %></td>
-          <td class="task_row"><%= link_to t('view.tasks.index.Destroy'), task, method: :delete, data: { confirm: t('view.tasks.index.Are you sure?') } ,class: "btn btn-outline-danger" %></td>
+          <td class="task_row"><%= link_to t('view.tasks.index.Show'), task ,class: ".btn-light" %></td>
+          <td class="task_row"><%= link_to t('view.tasks.index.Edit'), edit_task_path(task) ,class: ".btn-light" %></td>
+          <td class="task_row"><%= link_to t('view.tasks.index.Destroy'), task, method: :delete, data: { confirm: t('view.tasks.index.Are you sure?') } ,class: ".btn-light" %></td>
         </tr>
       <% end %>
     </tbody>
