--- a/app/views/labels/_form.html.erb
+++ b/app/views/labels/_form.html.erb
@@ -13,7 +13,7 @@
 
   <div class="field">
     <%= form.label :name %>
-    <%= form.number_field :name %>
+    <%= form.text_field :name %>
   </div>
 
   <div class="actions">
