--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -10,6 +10,7 @@
         <%= f.text_field :title ,placeholder: "検索", value: params[:title] , class: "form-group form-control" %>
         <%= f.select :status, ['未着手', '着手', '完了'], {include_blank: "Status" },{ class: 'form-control drop'} %>
         <%= f.select :priority, ["高","中","低"], {include_blank: "Priority" }, { class: 'form-control drop'} %>
+        <%= f.select("label_id", Label.pluck(:name, :id),{ include_blank: "Labels"}, {class: 'form-control drop'}) %>
         <%= f.hidden_field :search, value:"true" %>
         <%= f.submit "Search", class: "btn btn-outline-secondary" %>
       <% end %>
@@ -29,6 +30,7 @@
           <th>Status</th>
           <th><p class="select-drop"><%= link_to "優先順位", tasks_path(sort_priority: "true") %></p></th>
           <th>created</th>
+          <th>Label</th>
           <th colspan="3"></th>
         </tr>
       </thead>
@@ -42,6 +44,10 @@
             <td class="task_row"><%= task.status %></td>
             <td class="task_row_priority"><%= task.priority %></td>
             <td class="task_row"><%= task.created_at.strftime('%Y/%m/%d') %></td>
+            <td class="task_row_label"><% task.labels.each do |label| %>
+              <%= label.name %>
+            <% end %>
+            </td>
             <td class="task_row"><%= link_to t('view.tasks.index.Show'), task ,class: "btn btn-outline-primary" %></td>
             <td class="task_row"><%= link_to t('view.tasks.index.Edit'), edit_task_path(task) ,class: "btn btn-outline-warning" %></td>
             <td class="task_row"><%= link_to t('view.tasks.index.Destroy'), task, method: :delete, data: { confirm: t('view.tasks.index.Are you sure?') } ,class: "btn btn-outline-danger" %></td>
