update:タスクの詳細画面で紐づくラベル一覧が確認できる

--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -21,9 +21,18 @@
 </p>
 
 <p>
-  <strong>Priority:</strong>
+  <strong>Label:</strong>
   <%= @task.priority %>
 </p>
+
+<p>
+  <strong>Priority:</strong>
+  <% @task.labels.each do |label| %>
+    <%= label.name %>
+  <% end %>
+</p>
+
+
 
 <%= link_to 'Edit', edit_task_path(@task) %> |
 <%= link_to 'Back', tasks_path %>
