--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -39,15 +39,7 @@
   <br>
 
   <div class="field">
-    <% Label.all.each do |label| %>
-        <% if action_name == 'new' || action_name == 'create' %>
-          <%= form.check_box :label_ids, { multiple: true, checked: label[:checked], disabled: label[:disabled], include_hidden: false}, label[:id], "" %>
-          <label><%= label.name %></label>
-        <% elsif action_name == 'edit' || action_name == 'update' %>
-          <%= form.check_box :label_ids, { multiple: true, checked: @task.label_ids.include?(label.id), disabled: label[:disabled], include_hidden: false}, label[:id], "" %>
-          <label><%= label.name %></label>
-        <% end %>
-      <% end %>
+    <%= form.collection_check_boxes(:label_ids, Label.all, :id, :name) %>
   </div>
 
   <div class="actions">
